feat: implement promotion, customer contact, and genre management features